feat: 实现前后端完整功能集成
refactor(admin): 移除无用图标组件并重构登录逻辑
feat(admin): 添加与后端API的交互功能
feat(api): 实现完整的后端API服务
build(api): 添加mysql2和koa-better-router依赖
docs: 更新package-lock.json文件

--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "koa": "^3.0.1"
+    "koa": "^3.0.1",
+    "koa-better-router": "^2.1.1",
+    "mysql2": "^3.14.2"
   }
 }
