feat: 添加学员信息PDF生成功能
实现学员信息PDF导出功能，包括Word模板渲染和PDF转换
优化地址显示，将省市区合并为完整地址显示
添加相关依赖包docxtemplater、pizzip和libreoffice-convert

--- a/api/package.json
+++ b/api/package.json
@@ -9,8 +9,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "docxtemplater": "^3.65.2",
     "koa": "^3.0.1",
     "koa-better-router": "^2.1.1",
-    "mysql2": "^3.14.2"
+    "libreoffice-convert": "^1.6.1",
+    "mysql2": "^3.14.2",
+    "pizzip": "^3.2.0"
   }
 }
